--- a/app/lol/src/main/res/layout/fragment_setting.xml
+++ b/app/lol/src/main/res/layout/fragment_setting.xml
@@ -25,5 +25,12 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/tv_setting_version"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/b_show_dialog"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="show dialog"
+            app:layout_constraintTop_toBottomOf="@id/spinner_version" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
