--- a/app/practice/src/main/res/layout/fragment_pokemon_detail.xml
+++ b/app/practice/src/main/res/layout/fragment_pokemon_detail.xml
@@ -13,7 +13,7 @@
 
         <variable
             name="dto"
-            type="com.domain.practice.dto.SealedPokemon.Pokemon" />
+            type="com.domain.practice.dto.Pokemon" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
