--- a/app/lol/src/main/res/layout/vh_related_item.xml
+++ b/app/lol/src/main/res/layout/vh_related_item.xml
@@ -6,6 +6,10 @@
     <data>
 
         <variable
+            name="vh"
+            type="com.lol.ui.vh.RelatedItemVH" />
+
+        <variable
             name="gameItem"
             type="com.domain.lol.dto.GameItemInfo" />
     </data>
@@ -67,12 +71,5 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/iv_game_item_image"
             tools:text="item description" />
-
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/vp_related_item"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            app:layout_constraintTop_toBottomOf="@id/tv_game_item_description" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
