--- a/app/rss_reader/src/main/res/layout/vh_rss.xml
+++ b/app/rss_reader/src/main/res/layout/vh_rss.xml
@@ -10,47 +10,86 @@
             type="com.rss_reader.dto.Article" />
     </data>
 
-    <com.google.android.material.card.MaterialCardView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="8dp"
-        app:cardElevation="5dp"
-        tools:cardBackgroundColor="#ffff00">
+        android:background="@android:color/transparent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/mcv_article_root"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp">
+            android:layout_margin="10dp"
+            android:background="@drawable/ripple_effect"
+            android:clickable="true"
+            android:focusable="true"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="5dp"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:cardBackgroundColor="#ffff00">
 
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/tv_rss_title"
-                android:layout_width="wrap_content"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@{rss.title}"
-                android:textSize="20dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="title" />
+                android:background="@android:color/transparent">
 
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/tv_rss_description"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@{rss.feed}"
-                android:textSize="13dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_rss_title"
-                tools:text="feed" />
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tv_feed_name"
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:text="@{rss.feed}"
+                    android:visibleIf="@{rss.isHeader}"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="NPR" />
 
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/tv_rss_content"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@{rss.summary}"
-                android:textSize="15dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_rss_description"
-                tools:text="summary" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </com.google.android.material.card.MaterialCardView>
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tv_rss_title"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:ellipsize="end"
+                    android:maxLines="2"
+                    android:text="@{rss.title}"
+                    android:textSize="20dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/tv_feed_name"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_goneMarginStart="50dp"
+                    tools:text="title" />
+
+                <View
+                    android:id="@+id/v_separate_line"
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="5dp"
+                    android:background="#eeeeee"
+                    app:layout_constraintBottom_toTopOf="@id/tv_rss_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="@id/tv_rss_title"
+                    app:layout_constraintTop_toBottomOf="@id/tv_rss_title" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tv_rss_content"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginEnd="10dp"
+                    android:ellipsize="end"
+                    android:lines="3"
+                    android:maxLines="3"
+                    android:text="@{rss.summary}"
+                    android:textSize="15dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/tv_feed_name"
+                    app:layout_constraintTop_toBottomOf="@id/v_separate_line"
+                    app:layout_goneMarginStart="50dp"
+                    tools:text="summary" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </com.google.android.material.card.MaterialCardView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
