--- a/app/rss_reader/src/main/res/layout/activity_main.xml
+++ b/app/rss_reader/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity">
+    tools:context=".activities.MainActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -11,9 +11,19 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_rss_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toTopOf="@id/b_go_to_search"
+            app:layout_constraintTop_toTopOf="parent"
             tools:listitem="@layout/vh_rss" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/b_go_to_search"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="기사 찾기"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/rv_rss_list" />
 
         <ProgressBar
             android:id="@+id/pb_loading"
