--- a/app/rss_reader/src/main/res/layout/vh_feed_name.xml
+++ b/app/rss_reader/src/main/res/layout/vh_feed_name.xml
@@ -5,7 +5,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="50dp"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/white">
 
         <com.google.android.material.card.MaterialCardView
             android:layout_width="50dp"
