[rssReader] Gradle 변경

--- a/app/rss_reader/src/main/res/layout/vh_rss.xml
+++ b/app/rss_reader/src/main/res/layout/vh_rss.xml
@@ -57,7 +57,7 @@
                     android:layout_marginEnd="10dp"
                     android:ellipsize="end"
                     android:maxLines="2"
-                    android:text="@{rss.title}"
+                    android:text="@{rss.title.replace(&quot; &quot;, &quot;\u00A0&quot;)}"
                     android:textSize="20dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -90,7 +90,7 @@
                     android:goneIf="@{rss.summary.empty || rss.summary == null}"
                     android:lines="3"
                     android:maxLines="3"
-                    android:text="@{rss.summary}"
+                    android:text="@{rss.summary.replace(&quot; &quot;, &quot;\u00A0&quot;)}"
                     android:textSize="15dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
