--- a/app/rss_reader/src/main/res/layout/activity_search.xml
+++ b/app/rss_reader/src/main/res/layout/activity_search.xml
@@ -12,9 +12,13 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:hint="검색어를 입력하세요."
+            android:imeOptions="actionSearch"
+            android:inputType="text"
+            android:maxLines="1"
             app:layout_constraintEnd_toStartOf="@id/b_do_search"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/b_do_search"
