--- a/app/gps_alarm/src/main/res/layout/alarm_fragment.xml
+++ b/app/gps_alarm/src/main/res/layout/alarm_fragment.xml
@@ -2,6 +2,13 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+
+        <variable
+            name="handler"
+            type="com.bowoon.gps_alarm.ui.alarm.AlarmFragment.ClickHandler" />
+    </data>
+
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/srl_alarm_fragment_root"
         android:layout_width="match_parent"
@@ -18,6 +25,17 @@
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fab_add_alarm"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:contentDescription="@string/fab_content_desc"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:onDebounceClickListener="@{() -> handler.createAlarm()}"
+                app:srcCompat="@drawable/ic_plus_24" />
 
             <ProgressBar
                 android:id="@+id/pb_loading"
