--- a/app/rss_reader/src/main/res/values-night/themes.xml
+++ b/app/rss_reader/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
-    <style name="Theme.BoWoon" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.BoWoon" parent="UI.Theme.BoWoon">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_200</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -12,11 +12,5 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
-
-        <item name="android:textViewStyle">@style/TextColorBlack</item>
-    </style>
-
-    <style name="TextColorBlack" parent="Widget.AppCompat.TextView">
-        <item name="android:textColor">@color/black</item>
     </style>
 </resources>
