--- a/app/practice/src/main/res/menu/main_menu.xml
+++ b/app/practice/src/main/res/menu/main_menu.xml
@@ -3,13 +3,16 @@
     <item
         android:id="@+id/home"
         android:icon="@mipmap/ic_launcher"
+        android:menuCategory="secondary"
         android:title="리스트" />
     <item
         android:id="@+id/wish"
         android:icon="@mipmap/ic_launcher"
+        android:menuCategory="secondary"
         android:title="위시" />
     <item
         android:id="@+id/my"
         android:icon="@mipmap/ic_launcher"
+        android:menuCategory="secondary"
         android:title="마이" />
 </menu>
