--- a/app/rss_reader/src/main/res/layout/vh_article.xml
+++ b/app/rss_reader/src/main/res/layout/vh_article.xml
@@ -63,5 +63,14 @@
             app:layout_constraintBottom_toBottomOf="@+id/iv_article_image"
             app:layout_constraintTop_toBottomOf="@id/tv_article_title"
             tools:text="description\nasdfasdf\nasdfsadffasdvcwe" />
+
+        <ProgressBar
+            android:id="@+id/pb_loading"
+            style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="5dp"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
